Fixed issue with dart2js compile breaking. Was missing "library dart;" statements at the top of each file.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: Dartnes
+name: dartnes
 author: Matthew Brennan Jones <mattjones@workhorsy.org>
 description: A NES emulator written in Dart.
 dependencies:
