Updated to work with newest version of Dart.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,15 @@
 name: dartnes
-author: Matthew Brennan Jones <matthew.brennan.jones@gmail.com>
+version: 0.0.1
 description: A NES emulator written in Dart.
+author: Matthew Brennan Jones <matthew.brennan.jones@gmail.com>
+homepage: https://github.com/workhorsy/dartnes
+
+environment:
+  sdk: '>=1.0.0 <2.0.0'
+
 dependencies:
-  browser: any
+  browser: '>=0.10.0 <0.11.0'
+  dart_to_js_script_rewriter: '^0.1.0'
+
+transformers:
+- dart_to_js_script_rewriter
